--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit==1.31.0
-pandas==2.2.3
-numpy==1.26.4
-scikit-learn==1.6.1
-scipy==1.11.4
+streamlit
+pandas>=2.0.0
+numpy>=1.24.0
+plotly
 joblib==1.4.2
-plotly==5.18.0
+scikit-learn>=1.3.0
